force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/Apttus_Config2__IncentiveCustomDisplaySetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds information about incentive display pages</description>
    <label>Incentive Custom Display Setting</label>
</CustomObject>