force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__AllowedDecimals__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowedDecimals__c</fullName>
    <description>Sets displayed decimals for decimal numbers displayed in the incentive manager.</description>
    <inlineHelpText>Sets displayed decimals for decimal numbers displayed in the incentive manager.</inlineHelpText>
    <label>Allowed Decimals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>