force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__BenefitSectionFieldset__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BenefitSectionFieldset__c</fullName>
    <label>Benefit Section Fieldset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>