force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__CriteriaValueTypeOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CriteriaValueTypeOptions__c</fullName>
    <description>List of options for the Value Type field in criteria, separated by a semicolon;.</description>
    <inlineHelpText>List of options for the Value Type field in criteria, separated by a semicolon.</inlineHelpText>
    <label>Criteria Value Type Options</label>
    <type>TextArea</type>
</CustomField>