force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__HideCloneButton__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideCloneButton__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hides the clone button at the bottom of the page when checked.</description>
    <label>Hide Clone Button</label>
    <type>Checkbox</type>
</CustomField>