force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__InformationAdditionalSectionFieldset__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InformationAdditionalSectionFieldset__c</fullName>
    <description>Overrides the fields set in the information additional data section to use a custom fieldset.</description>
    <label>Information Additional Section Fieldset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>