force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__NavigationPages__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NavigationPages__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Will provide the pages to be displayed and sequence of display
For e.g. a string like: SCBDLP

S: Scope
C: Criteria
B: Benefit
D: Deduction
L: Limit
P: Coupons</description>
    <inlineHelpText>Will provide the pages to be displayed and sequence of display
For e.g. a string like: SCBDLP

S: Scope
C: Criteria
B: Benefit
D: Deduction
L: Limit
P: Coupons</inlineHelpText>
    <label>Navigation Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>