force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__RateTabelFieldset__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RateTabelFieldset__c</fullName>
    <description>Overrides the fields sets in the application to use a custom fieldset in the rate table.</description>
    <label>Rate Tabel Fieldset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>