force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__ShowExclusionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowExclusionCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether exclusion criteria should be displayed</description>
    <inlineHelpText>Indicates whether exclusion criteria should be displayed</inlineHelpText>
    <label>Show Exclusion Criteria?</label>
    <type>Checkbox</type>
</CustomField>