force-app/main/default/objects/Apttus_Config2__IncentiveCustomDisplaySetting__c/fields/Apttus_Config2__SubtitleText__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SubtitleText__c</fullName>
    <description>Controles the text displayed to the left of the Incentive Name on the Incentive Manager Page.</description>
    <inlineHelpText>Controles the text displayed to the left of the Incentive Name on the Incentive Manager Page.</inlineHelpText>
    <label>Subtitle Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>